--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,15 @@ environment:
   sdk: '>=3.2.6 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.4
+  firebase_core: ^2.27.0
+  firebase_storage: ^11.6.9
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
+  flutter_hooks: ^0.20.5
+  image_picker: ^1.0.8
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
